Fixed text wrapping issues
refs https://github.com/TryGhost/Team/issues/2606

--- a/ghost/admin/app/styles/layouts/mentions.css
+++ b/ghost/admin/app/styles/layouts/mentions.css
@@ -40,7 +40,6 @@
     font-size: 1.35rem;
     line-height: 1.2;
     margin-bottom: 14px;
-    white-space: nowrap;
     position: relative;
 }
 
@@ -115,6 +114,9 @@
 .gh-mention-timestamp {
     margin-left: auto;
     padding-left: 32px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .gh-mention-content {
